--- a/css/main_cellphone.css
+++ b/css/main_cellphone.css
@@ -499,7 +499,7 @@
     #ghibli_animation #ghibli_animation_article1 {
         text-align: center;
         position: relative;
-        height: 400px;
+        height: 480px;
         scroll-margin-top: 80px;
         box-sizing: content-box;
         padding-bottom: 200px;
@@ -861,6 +861,8 @@
         position: relative;
         height: 1450px;
         margin-top:-50px;
+        display: flex;
+        justify-content: center;
     }
     
     .ghibli_world_tour h3{
@@ -875,9 +877,6 @@
         /* background-color: red; */
         position: absolute;
         top: 250px;
-        left:50%;
-        transform: translateX(-50%);
-
     }
 
     .ghibli_world_tour:nth-child(2) {
@@ -885,8 +884,6 @@
         /* background-color: red; */
         position: absolute;
         top: 900px;
-        left:50%;
-        transform: translateX(-50%);
     }
 
     .ghibli_world_tour button {
@@ -930,10 +927,10 @@
 
     #ghibli_notice .ghibli_notice_background {
         position: absolute;
-        bottom: -50px;
+        bottom:-200px;
         z-index: -1;
         width: 100vw;
-        height: 600px;
+        height: 800px;
         transform: translateY(-160px);
         background-color: rgba(0, 182, 255, 0.1);
     }
@@ -942,7 +939,7 @@
         position: relative;
         /* background-color: red; */
         width: 300%;
-        height: 560px;
+        height: 770px;
         display: flex;
 
     }
@@ -950,18 +947,21 @@
     #notice_article .notice {
         /* position:absolute; */
         display: flex;
+        flex-flow: column;
         justify-content: center;
+        text-align: center;
         gap: 40px;
         align-items: center;
         width: 100vw;
-        height: 560px;
+        height: 780px;
     }
 
 
     #ghibli_notice #notice_article .notice_poster {
-        width: 240px;
+        width: 300px;
+        overflow: hidden;
         border-radius: 10px;
-        transform: translateY(-80px);
+        transform: translateY(10px);
     }
 
     #ghibli_notice #notice_article .notice_poster img {
@@ -969,19 +969,19 @@
     }
 
     #ghibli_notice #notice_article .notice_right {
-        margin-bottom: 160px;
-        width: 40%;
+        margin-bottom: 100px;
+        width: 60%;
     }
 
     #ghibli_notice .slide_button {
         position: absolute;
-        bottom: 160px;
+        bottom: 20px;
         left: 50%;
         transform: translateX(-50%);
     }
 
     #ghibli_notice button#prev {
-        margin-right: 60px;
+        margin-right: 130px;
     }
 
     #ghibli_notice button#prev,
@@ -1015,13 +1015,13 @@
        
 
     footer .inner {
-        margin-top:-60px;
+        margin-top:120px;
         display: flex;
         flex-flow: row wrap;
         justify-content: center;
         align-self: center;
         gap: 16px;
-        padding-bottom: 40px;
+        padding-bottom: 80px;
     }
 
     footer .inner #description {
