--- a/css/main_cellphone.css
+++ b/css/main_cellphone.css
@@ -6,6 +6,11 @@
         scroll-behavior: smooth;
     }
 
+    .wrap{
+        width: 100%;
+        overflow: hidden;
+    }
+
     .inner {
         width: 100%;
         height: 100%;
@@ -39,11 +44,14 @@
     .article_title_big {
         font-size: 12em;
     }
+    .article_title_big-2 {
+        font-size: 12em;
+        font-weight: 800;
+    }
 
     .article_category {
         font-size: 12em;
     }
-
     /*HEADER*/
     header {
         width: 100%;
@@ -53,9 +61,9 @@
         font-weight: 700;
         color:#333;
         position: fixed;
-        z-index: 10;
+        z-index: 30;
         transition-property: background-color border;
-
+        box-sizing: content-box;
     }
 
     header .inner {
@@ -135,11 +143,15 @@
         margin-left: 30px;
     }
 
+    
     header .inner #logo a #logo_img {
         width: 60px;
         height: 60px;
         position: relative;
+        border-radius: 60px;
+        overflow: hidden;
     }
+
 
     header .inner #logo a #logo_img #logo_img_blue {
         opacity: 1;
@@ -147,6 +159,7 @@
         top: 0;
         left: 0;
         transition: all 1s;
+        width: 100%;
     }
 
     header .inner #logo a #logo_img #logo_img_white {
@@ -155,59 +168,71 @@
         top: 0;
         left: 0;
         transition: all 1s;
+        width: 100%;
     }
 
     header .inner #logo a span {
         color: #00B6FF;
     }
 
-    header .inner ul #language_select #language-english {
-        color: #333;
+    header #category{
+        display: none;
     }
+    
 
-    header .inner ul #language_select #language-english:hover {
-        color: #00B6FF;
-    }
-
-    #category{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+    header #category_wrap{
+        width: 100%;
+        height: 0vh;
+        
+        background-color: #f3fbff;
         position: absolute;
         top:0;
-        right:0;
-        width: 0%;
-        height: 100vh;
-        background-color: #f3fbff;
-        cursor:pointer;
-        transition: all ease-out 0.7s;
+        padding: 0vh 5%;
+        display: block;
+        transition: all 0.6s ease-out;
+        overflow: hidden;
     }
-    #category.showCategory{
-        width: 100%;
+    header #category_wrap.showCategory{
+        height: 100vh;
+        padding: 10vh 5%;
+        visibility: visible;
+    }
+    header #category-middle {
+        display: flex;
+        flex-flow: column;
+        gap:50px;
+        margin-left:70px;
+        line-height: 26px;
+        position: relative;
+        
     }
 
-    #category .first_category{
+    header #category-middle>.first_category-middle{
+        color:#00B6FF;
+        font-size: 16px;
         position: relative;
-        top:30%;
-        left:60px;
+    }
+
+    header #category-middle .second_category-middle{
+        /* display: none; */
+        margin-top:12px;
+        line-height: 24px;
+    }
+
+    header #category-middle .second_category-middle li{
+        line-height: 30px;
+        font-size: 0.9em;
+    }
+    header #category-middle .second_category-middle li a:hover{
+        color: #00B6FF;
+    }
+    header #language_select-middle span{
         display: flex;
-        flex-direction: column;
-        height: 26px;
-        line-height: 26px;
-        margin-bottom:20px;
-        position: relative;
+        color: #00B6FF;
     }
-    #category .first_category:hover::after{
-        width: 100%;
-    }
-    #category .first_category::after{
-        content: "";
-        position: absolute;
-        bottom:-3px;
-        width: 0%;
-        height: 2px;
-        background-color: #00B6FF;
-        transition: all 0.3s;
+    header #language_select-middle #language-english-middle:hover{
+        color:#00B6FF;
+        cursor:pointer;
     }
 
     .material-icons{
@@ -216,72 +241,51 @@
         color:#00B6FF;
     }
 
-    /* #category a{
-        display: block;
-        height: 26px;
-        margin-top:10px;
-    } */
-
-    header .first_category > span{
+    header .first_category-middle > span{
         display: flex;
         align-content: center;
-        gap:4px;
+        gap:6px;
         line-height: 26px;
     }
 
-    .second_category{
+    /*MAIN SECTION*/
+    #main-big{
         display: none;
     }
-    /*MAIN SECTION*/
-    body {
+    #main_section{
         position: relative;
-        overflow-x: hidden;
     }
-
-    #main_section {
-        height: 6500px;
-    }
-
-    #main_section p {
-        text-align: center;
-        word-break: keep-all;
-    }
-
-    section .full_inner {
-        position: sticky;
-        top: 0px;
-        /* background-color: pink; */
-        width: 100vw;
-        height: 100vh;
-    }
-
-    section .full_inner #img_box {
+    #img_box-middle{
         position: absolute;
-        margin: 0 auto;
-        width: 500px;
-        height: 500px;
-        border-radius: 50%;
-        overflow: hidden;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        top:0;
+        width: 100%;
+        height: 100vh;
         background-image: url('../img/main/howl_background.png');
         background-repeat: no-repeat;
-        background-size: auto 100%;
-        animation: howl_background_move 200s alternate infinite;
-        background-position: 100% 50%;
-        transition: all 1s;
+        background-size: cover;
+        animation: howl_move s alternate infinite;
     }
 
-    section .full_inner #img_box #howl {
+    #img_box-middle img{
+        width: 100%;
         position: absolute;
-        left: -25%;
-        bottom: 0%;
-        width: 150%;
-        animation: howl_move 1.5s alternate infinite;
-        transition: all 1s;
+        top:50%;
+        transform: translateY(-50%);
+    }
+    #studioGhibli_write-middle{
+        position: absolute;
+        top:0;
+        left:0;
+        z-index: 1;
     }
 
+    #studioGhibli_write-middle{
+        width: 50%;
+        position: absolute;
+        Top:800px;
+        left:50%;
+        transform: translateX(-50%);
+    }
 
     @keyframes howl_move {
         to {
@@ -303,66 +307,14 @@
         }
     }
 
-    section .full_inner #studioGhibli_write {
-        position: absolute;
-        width: 600px;
-        top: 70%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        transition: opacity 0.5s;
-        opacity: 1;
-    }
-
-    section .full_inner #scroll_info {
-        position: absolute;
-        bottom: 10%;
-        left: 50%;
-        transform: translate(-50%);
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        border: 2px solid #00B6FF;
-        background-color: rgba(255, 255, 255, 0.9);
-        backdrop-filter: blur(10px);
-        color: #00B6FF;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 4em;
-        row-gap: 4px;
-        opacity: 0;
-        transition: all 0.5s;
-    }
-
-    section .full_inner #scroll_info span {
-        color: #00B6FF;
-    }
-
-    #main_section .full_inner #change_img_box {
-        opacity: 0;
-        position: absolute;
-        width: 100vw;
-        height: 100vh;
-        background-color: white;
-        transition: opacity 0.5s;
-    }
-
-    #main_section .full_inner #change_img_text {
-        font-size: 30px;
-        font-weight: 800;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        opacity: 0;
-        transition-delay: 0.5s;
-        transition: all 0.5s;
-    }
 
     /*Introduce Ghibli*/
+    #introduce_ghibli{
+        margin-top: 100vh;
+    }
+
     #introduce_ghibli .inner {
-        height: 1000px;
+        height: 700px;
         /* background-color: #ffffff; */
         /* background-color: BLUE; */
     }
@@ -370,26 +322,27 @@
     #introduce_ghibli .inner img {
         width: 60%;
         position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translateX(-50%);
+        top: 25%;
+        left: 20%;
+        
         /* background-color: RED; */
     }
 
     #introduce_ghibli .inner .arrow_down {
         position: absolute;
-        bottom: 200px;
+        bottom: 100px;
         left: 50%;
     }
 
     /*About Ghibli*/
     #about_ghibli {
         background-color: rgba(0, 182, 255, 0.1);
-        width: 100vw;
+        width: 100%;
+        padding-top:10%;
+        padding-bottom:10%;
     }
 
     #about_ghibli .inner {
-        height: 1350px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -454,15 +407,30 @@
         display: flex;
         flex-flow: row wrap;
         justify-content: space-evenly;
-        column-gap: 3%;
+        overflow: hidden;
     }
 
     #ghibli_animation .inner #article_area {
-        width: 90%
+        display: none;
+    }
+
+    /* #article_area button{
+        margin-top: 16px;
+    } */
+
+    #article_area-middle {
+        width: 80%;
     }
     #article_area .article_content{
         display: none;
     }
+    #article_area .article_content-2{
+       padding-top:16px;
+        width: 70%;
+        font-size: 5em;
+        line-height: 190%;
+    }
+
     #ghibli_animation .inner .article_category,
     #ghibli_animation .inner .arrow_down {
         width: 100%;
@@ -497,7 +465,7 @@
     }
 
     #ghibli_animation #ghibli_animation_article1 {
-        text-align: center;
+
         position: relative;
         height: 480px;
         scroll-margin-top: 80px;
@@ -506,19 +474,19 @@
     }
 
     #ghibli_animation #ghibli_animation_article1 button {
-        margin-top: 36px;
+        margin-top: 16px;
     }
 
     #ghibli_animation img {
-        width: 120%;
+        width: 150%;
     }
-
+    
     #ghibli_animation #ghibli_animation_article1_all {
         /* background-color: pink; */
         position: absolute;
-        bottom: 106px;
+        bottom: 76px;
         left: 50%;
-        transform: translateX(-50%);
+        transform: translateX(-80%);
         z-index: 1;
         margin: 0;
         transition: all 0.5s;
@@ -526,10 +494,10 @@
 
     #ghibli_animation #ghibli_animation_article1_img_background {
         position: absolute;
-        bottom: 110px;
+        bottom: 80px;
         left: 50%;
         transform: translateX(-50%);
-        width: 90%;
+        width: 100%;
         height: 25%;
         border-radius: 500px;
         overflow: hidden;
@@ -546,33 +514,10 @@
     }
 
     #ghibli_animation #ghibli_animation_article1_haku img:nth-child(1) {
-        position: absolute;
-        width: 60%;
-        bottom: 110px;
-        left: 15%;
-        z-index: 1;
-        animation: rightToLeft 3s ease alternate infinite;
-    }
-
-    #ghibli_animation #ghibli_animation_article1_haku img:nth-child(2) {
-        position: absolute;
-        width: 42%;
-        bottom: 20%;
-        right: 10%;
-        z-index: 1;
-        animation: haku 3s ease alternate infinite;
+        display: none;
     }
 
 
-    @keyframes haku {
-        to {
-            transform: translateY(-20px);
-        }
-
-        from {
-            left: translateY(0px);
-        }
-    }
 
     #ghibli_animation #ghibli_animation_article1_img_background_first {
         transition: all 0.5s;
@@ -588,17 +533,18 @@
 
     #ghibli_animation .article_row#ghibli_animation_article2 {
         scroll-margin-top: 80px;
+
     }
 
     #ghibli_animation .article_row .article_align {
         display: flex;
-        flex-flow: row;
+        flex-flow: column;
         justify-content: center;
         align-items: center;
     }
 
     #ghibli_animation .article_row .article_left {
-        width: 65%;
+        width: 90%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -616,7 +562,7 @@
         z-index: -1;
         right: 0;
         border-radius: 400px 400px 0px 0px;
-        background: url('/img/main/animation_howl_Background.jpg') center / cover no-repeat;
+        background: url('../img/main/animation_howl_Background.jpg') center / cover no-repeat;
         animation: rightToTopBackground 50s ease alternate infinite;
     }
 
@@ -661,7 +607,7 @@
         z-index: -1;
         right: 0;
         border-radius: 400px 400px 0% 0%;
-        background: url('/img/main/aniamtion_totoro_Background1.png') center / cover no-repeat;
+        background: url('../img/main/aniamtion_totoro_Background1.png') center / cover no-repeat;
         animation: righToLeftBackground2 50s ease alternate infinite;
     }
 
@@ -710,7 +656,7 @@
         z-index: -1;
         right: 0;
         border-radius: 400px 400px 0% 0%;
-        background: url('/img/main/aniamtion_mononoke_Background.png') center / cover no-repeat;
+        background: url('../img/main/aniamtion_mononoke_Background.png') center / cover no-repeat;
         animation: righToLeftBackground2 50s ease alternate infinite;
     }
 
@@ -732,117 +678,113 @@
         }
     }
 
-    /*ghibli_others*/
-    #ghibli_others .inner .flip-line {
-        background-color: gold;
-        width: 100%;
-        height: 2000px;
-        padding-bottom: 400px;
-        position: relative;
-    }
+      /*ghibli_others*/
 
-    #ghibli_others .inner .article_category {
-        padding-top: 100px;
-    }
-
-    .others-flip-all {
-
-        transition: all 0.5s;
-        width: 100%;
-    }
-
-    .others-flip-all .others-flip-align {
-        display: flex;
-        width: 200%;
+      #ghibli_others .inner{
+        width: 100vw;
         /* background-color: gold; */
-        position: absolute;
-        justify-content: center;
-        gap:10px;
+}
+#ghibli_others .inner .flip-line{
+    display: none;
+}
+#ghibli_others .inner .flip-line {
+    /* background-color: gold; */
+    width: 100%;
+    height: 3000px;
+    padding-bottom: 500px;
+    position: relative;
+}
 
-    }
-    .others-flip-all #others-flip-1,
-    .others-flip-all #others-flip-2 {
-        width: 100%;
-        
-    }
-    .others-flip-all #others-flip-2 {
-        left: 100%;
-        /* background-color: pink; */
-    }
+.others-flip-all .others-flip-align {
+    display: flex;
+    flex-direction: column;
+    column-gap: 50px;
+    align-items: center;
+    width: 100%;
+    margin-bottom:100px;
+}
 
-    .others-flip-all .others-flip-align .flip-content {
-        width: 430px;
-        margin-left: 30px;
-    }
-    .others-flip-all .others-flip-align .flip-content .article_content{
-        width: 90%;
-    }
-    .others-flip-all .others-flip-align .flip-content .button_big{
-       margin-top:20px;
-    }
-    .others-flip-all .others-flip {
-        width: 30%;
-        height: auto;
-        perspective: 1000px;
-    }
+.flip-line-middle{
+    display: flex;
+    justify-content: center;
+}
+.others-flip-all .others-flip-align .flip-content {
+    width: 80%;
+}
 
-    .others-flip-all .others-flip:hover {
-        cursor: pointer;
-    }
+.others-flip-all .others-flip {
+    margin-top:30px;
+    width: 80%;
+    perspective: 1000px;
+    order:1;
+}
 
-    .others-flip-all .flip-inner {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        transition: transform 0.6s;
-        transform-style: preserve-3d;
-    }
+.others-flip-all .others-flip:hover {
+    cursor: pointer;
+}
 
-    .others-flip-all .flip-inner img {
-        width: 110%;
-    }
+.others-flip-all .flip-inner {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+.others-flip:nth-child(2n){
+    display: none;
+}
 
-    .others-flip:hover .flip-inner {
-        transform: rotateY(180deg);
-    }
+.others-flip-all .flip-inner img {
+    display: none;
+}
 
-    .others-flip-all .flip-inner .flip-front,
-    .others-flip-all .flip-inner .flip-back {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
-        overflow: hidden;
-        border-radius: 20px;
-    }
+.flip-line-middle .others-flip .flip-front{
+    background-image: url('../img/main/ghibli_musical_1.jpg');
+    background-size: cover;
+    background-position: 50% 10%;
+}
 
-    .others-flip-all .flip-inner .flip-back {
-        transform: rotateY(180deg);
-    }
-    .others-flip-align .others-flip:nth-of-type(2){
-        display: none;
-    }
+.flip-line-middle .others-flip #flip-img-2{
+    background-image: url('../img/main/ghibli_movie_1-2.jpg');
+    background-size: cover;
+    background-position: 50% 15%;
+}
+
+.others-flip-all .flip-inner .flip-front,
+.others-flip-all .flip-inner .flip-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+.others-flip-all .flip-inner .flip-back {
+    transform: rotateY(180deg);
+}
+
+.flip-line-middle .flip-content .article_content{
+    width: 100%;
+}
+
 
     /*ghibli_world*/
     #ghibli_world .inner {
         height: 900px;
     }
 
-    #ghibli_world .full_inner {
-        position: static;
-    }
 
     #ghibli_world .full_inner#ghibli_world_background {
-        margin-top: 200px;
+        margin-top: 100px;
         background-image: url('../img/main/ghibli_world.jpg');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
         height: 614px;
         display: flex;
-
     }
 
     #ghibli_world .full_inner#ghibli_world_background .inner svg {
@@ -873,14 +815,14 @@
     }
 
     .ghibli_world_tour:nth-child(1) {
-        width: 90%;
+        width: 80%;
         /* background-color: red; */
         position: absolute;
         top: 250px;
     }
 
     .ghibli_world_tour:nth-child(2) {
-        width: 90%;
+        width: 80%;
         /* background-color: red; */
         position: absolute;
         top: 900px;
@@ -892,7 +834,7 @@
 
     .ghibli_world_tour .ghibli_world_tour_img_1 {
         width: 100%;
-        height: 300px;
+        height: 220px;
         background: url('../img/main/ghibli_world_tour_1.jpg');
         background-repeat: no-repeat;
         background-size: cover;
@@ -902,7 +844,7 @@
 
     .ghibli_world_tour .ghibli_world_tour_img_2 {
         width: 100%;
-        height: 300px;
+        height: 220px;
         background: url('../img/main/ghibli_world_tour_2.jpg');
         background-repeat: no-repeat;
         background-size: cover;
@@ -978,11 +920,10 @@
         bottom: 20px;
         left: 50%;
         transform: translateX(-50%);
+        display: flex;
+        gap:60px;
     }
 
-    #ghibli_notice button#prev {
-        margin-right: 130px;
-    }
 
     #ghibli_notice button#prev,
     #ghibli_notice button#next {
