--- a/css/main_tablet.css
+++ b/css/main_tablet.css
@@ -52,7 +52,7 @@
         font-size: 12em;
     }
 
-    /*HEADER*/
+   
     header {
         width: 100%;
         height: 72px;
@@ -61,17 +61,20 @@
         font-weight: 700;
         color:#333;
         position: fixed;
-        z-index: 10;
+        z-index: 30;
         transition-property: background-color border;
         box-sizing: content-box;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     header .inner {
-        /* background-color: aqua; */
         display: flex;
         align-items: center;
         justify-content: space-between;
-
+        width: 100%;
+        padding:5%;
     }
 
     .hamburger_menu {
@@ -80,7 +83,6 @@
         display: block;
         position: relative;
         cursor: pointer;
-        margin-right: 30px;
         z-index: 10;
         transition: all 1s;
     }
@@ -109,6 +111,7 @@
 
     .hamburger_menu span.active {
         transition: top 0.3s 0s, transform 0.3s 0.4s, opacity 0.3s 0.3s;
+        background-color: #00B6FF;
     }
 
     .hamburger_menu span:nth-of-type(1).active {
@@ -140,7 +143,6 @@
         display: flex;
         align-items: center;
         column-gap: 24px;
-        margin-left: 30px;
     }
 
     
@@ -153,70 +155,117 @@
     }
 
 
-    header .inner #logo a #logo_img #logo_img_blue {
-        opacity: 1;
+    header #logo_img_blue {
         position: absolute;
         top: 0;
         left: 0;
         transition: all 1s;
         width: 100%;
+        height:100%;
     }
 
-    header .inner #logo a #logo_img #logo_img_white {
-        opacity: 0;
+    header #logo_img_white {
         position: absolute;
         top: 0;
         left: 0;
         transition: all 1s;
         width: 100%;
-    }
-
-    header .inner #logo a span {
-        color: #00B6FF;
+        height:100%;
     }
 
     header #category{
         display: none;
     }
     
+    /*header-middle*/
+    #logo_text.header-middle{
+        color:#fff;
+        transition: all 1s;
+    }
+    .hamburger_menu .header-middle{
+        background-color: #fff;
+    }
+    #logo_img_white.header-middle{
+        opacity: 1;
+    }
+    #logo_img_blue.header-middle{
+        opacity: 0;
+    }
+        
+    #logo_text.header-middle.change{
+        color:#00B6FF;
+    }
+    .hamburger_menu .header-middle.change{
+        background-color: #00B6FF;
+    }
+    #logo_img_white.header-middle.change{
+        opacity: 0;
+    }
+    #logo_img_blue.header-middle.change{
+        opacity: 1;
+    }
+    header.header-middle.change{
+        border-bottom: 2px solid #fff;
+        background-color: rgba(255, 255, 255, 0.8);
+        backdrop-filter: blur(10px);
+    }
+
 
     header #category_wrap{
-        width: 100vw;
+        width: 100%;
         height: 0vh;
-        
         background-color: #f3fbff;
         position: absolute;
         top:0;
-        padding: 0vh 5vw;
+        padding: 0vh 5%;
         display: block;
         transition: all 0.6s ease-out;
         overflow: hidden;
     }
     header #category_wrap.showCategory{
         height: 100vh;
-        padding: 10vh 5vw;
+        padding: 10vh 5%;
         visibility: visible;
     }
+
     header #category-middle {
         display: flex;
         flex-flow: column;
         gap:50px;
-        margin-left:70px;
         line-height: 26px;
         position: relative;
+        width:100%;
         
     }
-
     header #category-middle>.first_category-middle{
         color:#00B6FF;
-        font-size: 18px;
-        position: relative;
-    }
+        font-size: 16px;
+        display:flex;
+        justify-content: space-between;
+        flex-flow: wrap;
+        cursor: pointer;
+        border-bottom: 1px solid #00B6FF;
+    } 
+
 
     header #category-middle .second_category-middle{
-        /* display: none; */
-        margin-top:20px;
-        line-height: 20px;
+        visibility: hidden;
+        margin-top:10px;
+        height:0px;
+        width:100%;
+        opacity: 0;
+        transition: opacity 1s, transform 0.4s;
+        transform: translateY(-5px);
+    }
+    header #category-middle .second_category-middle.showCategory{
+        visibility: visible;
+        height: auto;
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    
+    header .plus.showCategory{
+        transform: rotate(45deg);
     }
 
     header #category-middle .second_category-middle li{
@@ -246,136 +295,108 @@
         align-content: center;
         gap:6px;
         line-height: 26px;
+        color: #00B6FF;
     }
-
 
     /*MAIN SECTION*/
-    
-
-    #main_section {
-        height: 6500px;
+    #main_section .full_inner{
+        display: none;
     }
-
-    #main_section p {
-        text-align: center;
-        word-break: keep-all;
+    .full_inner-middle{
+        z-index:2;
+        width:100%;
+        height:100vh;
     }
-
-    section .full_inner {
-        position: sticky;
-        top: 0px;
-        /* background-color: pink; */
-        width: 100vw;
-        height: 100vh;
+    #main-big{
+        display: none;
     }
-
-    section .full_inner #img_box {
+    #main_section{
+        position: relative;
+    }
+    #img_box-middle{
         position: absolute;
-        margin: 0 auto;
-        width: 500px;
-        height: 500px;
-        border-radius: 50%;
-        overflow: hidden;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        bottom:0;
+        width: 100%;
+        height: 100%;
         background-image: url('../img/main/howl_background.png');
         background-repeat: no-repeat;
-        background-size: auto 100%;
+        background-size: cover;
         animation: howl_background_move 200s alternate infinite;
-        background-position: 100% 50%;
-        transition: all 1s;
     }
 
-    section .full_inner #img_box #howl {
+    #img_box-middle #howl-middle{
+        width: 100%;
         position: absolute;
-        left: -25%;
-        bottom: 0%;
-        width: 150%;
-        animation: howl_move 1.5s alternate infinite;
-        transition: all 1s;
+        top:50%;
+        animation: howl_move 2s alternate infinite;
+    }
+    #studioGhibli_write-middle{
+        position: absolute;
+        left:50%;
+        transform:translateX(-50%);
+        width:  80%;
+        z-index: 1;
+        bottom:10%;
     }
 
+    .inner-middle{
+        position: relative;
+        top:100%;
+        /* background-color: pink; */
+        width: 100%;
+        height: 100%;
+        background-color: 100%;
+        
+    }
+
+    #change_img_text-middle{
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        font-size: 9em;
+        font-weight: 800;
+        transition: all 0.6s;
+    }
+    
+    .colorChange{
+        animation:  text-color-change 1s;
+        animation-fill-mode: both;
+    }
+
+    @keyframes text-color-change{
+        to{
+            font-size: 10em;
+            color:#00B6FF;
+        }
+    }
 
     @keyframes howl_move {
         to {
-            transform: translate(0, 0);
+            transform: translate(0, -50%);
         }
 
         from {
-            transform: translate(5px, 0px);
+            transform: translate(5px, -50%);
         }
     }
 
     @keyframes howl_background_move {
         to {
-            background-position: 0% 50%;
+            background-position: 0%;
         }
 
         from {
-            background-color: 50% 50%;
+            background-position: 50%;
         }
     }
 
-    section .full_inner #studioGhibli_write {
-        position: absolute;
-        width: 600px;
-        top: 70%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        transition: opacity 0.5s;
-        opacity: 1;
-    }
 
-    section .full_inner #scroll_info {
-        position: absolute;
-        bottom: 10%;
-        left: 50%;
-        transform: translate(-50%);
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        border: 2px solid #00B6FF;
-        background-color: rgba(255, 255, 255, 0.9);
-        backdrop-filter: blur(10px);
-        color: #00B6FF;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 4em;
-        row-gap: 4px;
-        opacity: 0;
-        transition: all 0.5s;
-    }
-
-    section .full_inner #scroll_info span {
-        color: #00B6FF;
-    }
-
-    #main_section .full_inner #change_img_box {
-        opacity: 0;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-color: white;
-        transition: opacity 0.5s;
-    }
-
-    #main_section .full_inner #change_img_text {
-        font-size: 30px;
-        font-weight: 800;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        opacity: 0;
-        transition-delay: 0.5s;
-        transition: all 0.5s;
-    }
 
     /*Introduce Ghibli*/
     #introduce_ghibli .inner {
+        margin-top:100%;
         height: 1000px;
         /* background-color: #ffffff; */
         /* background-color: BLUE; */
@@ -385,9 +406,7 @@
         width: 60%;
         position: absolute;
         top: 10%;
-        left: 50%;
-        transform: translateX(-50%);
-        /* background-color: RED; */
+        left: 20%;
     }
 
     #introduce_ghibli .inner .arrow_down {
@@ -484,30 +503,10 @@
 
     #ghibli_animation .inner #pagination_area {
         width: 2%;
+        display:none;
     }
 
-    #ghibli_animation .inner #pagination_area #pagination {
-        position: sticky;
-        display: flex;
-        flex-direction: column;
-        width: 20px;
-        row-gap: 15px;
-        /* background-color: red; */
-        top: 45%;
-        transition: all 0.5s;
-    }
-
-    #ghibli_animation .inner #pagination_area #pagination a {
-        display: block;
-        width: 100%;
-        height: 20px;
-        border-radius: 24px;
-        background-color: rgba(0, 182, 255, 0.2);
-    }
-
-    #ghibli_animation .inner #pagination_area #pagination a.active {
-        background-color: #00B6FF;
-    }
+    
 
     #ghibli_animation #ghibli_animation_article1 {
         text-align: center;
